deploy/eshopweb-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"hplus-db"}]'
    app.openshift.io/vcs-ref: feature-fmg
    app.openshift.io/vcs-uri: https://github.com/hatmarch/eShopOnWeb.git
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2020-12-14T06:51:53Z"
  labels:
    app: eshopweb
    app.kubernetes.io/component: eshopweb
    app.kubernetes.io/instance: eshopweb
    app.kubernetes.io/name: dotnet
    app.openshift.io/runtime: dotnet
    app.openshift.io/runtime-version: 3.1-el7
  name: eshopweb
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: eshopweb
    deploymentconfig: eshopweb
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"hplus-db"}]'
    app.openshift.io/vcs-ref: feature-fmg
    app.openshift.io/vcs-uri: https://github.com/hatmarch/eShopOnWeb.git
    deployment.kubernetes.io/revision: "2"
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2020-12-14T06:51:53Z"
  generation: 3
  labels:
    app: eshopweb
    app.kubernetes.io/component: eshopweb
    app.kubernetes.io/instance: eshopweb
    app.kubernetes.io/name: dotnet
    app.openshift.io/runtime: dotnet
    app.openshift.io/runtime-version: 3.1-el7
  name: eshopweb
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: eshopweb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: eshopweb
        deploymentconfig: eshopweb
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          valueFrom:
            secretKeyRef:
              key: ASPNETCORE_ENVIRONMENT
              name: eshop-dev
        - name: ASPNETCORE_URLS
          valueFrom:
            secretKeyRef:
              key: ASPNETCORE_URLS
              name: eshop-dev
        - name: ConnectionStrings__CatalogConnection
          valueFrom:
            secretKeyRef:
              key: ConnectionStrings__CatalogConnection
              name: eshop-dev
        - name: ConnectionStrings__IdentityConnection
          valueFrom:
            secretKeyRef:
              key: ConnectionStrings__IdentityConnection
              name: eshop-dev
        image: quay.io/mhildenb/eshopweb
        imagePullPolicy: Always
        name: eshopweb
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"hplus-db"}]'
    openshift.io/host.generated: "true"
  creationTimestamp: "2020-12-14T06:51:53Z"
  labels:
    app: eshopweb
    app.kubernetes.io/component: eshopweb
    app.kubernetes.io/instance: eshopweb
    app.kubernetes.io/name: dotnet
    app.openshift.io/runtime: dotnet
    app.openshift.io/runtime-version: 3.1-el7
  name: eshopweb
spec:
  host: eshopweb-az-demo-dev.apps.cluster-b057.b057.example.opentlc.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: eshopweb
    weight: 100
  wildcardPolicy: None
